syntax = "proto3";

package juju.simpleapi;

option go_package = "github.com/juju/juju/workers/grpcserver/simpleapi";

service SimpleService {
    rpc Status(StatusRequest) returns (StatusResponse);

    rpc Deploy(DeployRequest) returns (DeployResponse);
}

message StatusRequest {
    repeated string patterns = 1;
}

message StatusResponse {
    ModelStatusInfo model = 1;
    
}

message ModelStatusInfo {
    string name = 1;
    string type = 2;
    map<string, ApplicationStatus> applications = 3;
}

message ApplicationStatus {
    string charm_name = 1;
    string charm_version = 2;
    DetailedStatus status = 3;
}

message DetailedStatus {
    string status = 1;
    string info = 2;
    string life = 3;
}

message DeployRequest {
    string charm_name = 1;
    string application_name = 2;
    uint32 num_units = 3;
}

message DeployResponse {
}